--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
     "express": "^5.1.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
