--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "typescript": "^5.9.3",
     "zod": "^4.1.12"
