--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "typescript": "^5.9.3",
+    "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
