--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+        "@/*": ["*"]
+    },
     // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
@@ -38,5 +42,11 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+      "node_modules",
+      "dist",
+      "*.config.*"
+  ],
+  "include": ["src/**/*"]
 }
