--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "typescript": "^5.9.3",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
@@ -27,6 +26,9 @@
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
     "prettier": "3.6.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0"
   }
 }
