--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
-        "@/*": ["*"]
+      "@/*": ["*"]
     },
     // File Layout
     "rootDir": "./src",
@@ -43,10 +43,6 @@
     "moduleDetection": "force",
     "skipLibCheck": true
   },
-  "exclude": [
-      "node_modules",
-      "dist",
-      "*.config.*"
-  ],
+  "exclude": ["node_modules", "dist", "*.config.*"],
   "include": ["src/**/*"]
 }
