--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,17 @@
+# Dependency and build files
+node_modules/
+dist/
+build/
+
+# Lockfiles
+pnpm-lock.yaml
+package-lock.json
+yarn.lock
+
+# Env/config
+.env
+.env.*
+
+# Other
+coverage/
 /build/coverage
