--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "winston": "^3.18.3",
     "zod": "^4.1.12"
   },
@@ -25,6 +26,7 @@
     "@eslint/js": "^9.37.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/hpp": "^0.2.6",
     "@types/node": "^24.7.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
