--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "start": "node dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "start:pm2": "pm2 start dist/server.js --name express-backend",
-    "restart:pm2": "pm2 restart express-backend"
+    "restart:pm2": "pm2 restart express-backend",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -40,7 +48,9 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
+    "husky": "^8.0.0",
     "jiti": "^2.6.1",
+    "lint-staged": "^16.2.3",
     "prettier": "3.6.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
