--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "lint-staged": {
     "src/**/*.{ts,js}": [
       "prettier --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "keywords": [],
