--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "http-errors": "^2.0.0",
     "pm2": "^6.0.13",
     "winston": "^3.18.3",
     "xss-filters": "^1.2.7",
