--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
+    "@types/http-errors": "^2.0.5",
     "@types/node": "^24.7.0",
     "@types/xss-filters": "^1.2.0",
     "eslint": "^9.37.0",
