--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "rimraf dist && tsc -p ./tsconfig.build.json",
     "pretty": "npx prettier ./src --write",
     "lint": "npx eslint ./src --fix",
-    "start": "node dist/server.js",
-    "start:dev": "nodemon --watch src --ext ts --exec tsx src/app.ts",
-    "start:pm2": "pm2 start dist/server.js --name express-backend",
-    "restart:pm2": "pm2 restart express-backend",
+    "start": "NODE_ENV=production node dist/server.js",
+    "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/app.ts",
+    "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
+    "restart:pm2": "NODE_ENV=production pm2 restart express-backend",
     "prepare": "husky install"
   },
   "lint-staged": {
