--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
+    "morgan": "^1.10.1",
     "pm2": "^6.0.13",
     "winston": "^3.18.3",
     "xss-filters": "^1.2.7",
