Add morgan package

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
     "@types/http-errors": "^2.0.5",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.7.0",
     "@types/xss-filters": "^1.2.0",
     "eslint": "^9.37.0",
