--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "http-status": "^2.1.0",
     "morgan": "^1.10.1",
     "pm2": "^6.0.13",
     "winston": "^3.18.3",
