Add better auth env vars

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 NODE_ENV=development
 DATABASE_URL=https://www.example.com/1234
 JWT_SECRET=secrettesttesttesttesttesttesttesttesttesttesttest
+
+BETTER_AUTH_SECRET=nMKKmRcaRzALhw8QznS2d0K7l7LtEvUM
+BETTER_AUTH_URL=http://localhost:3000
