--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "@prisma/client": "^6.17.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "better-auth": "^1.3.27",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -59,6 +61,7 @@
     "lint-staged": "^16.2.3",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
+    "prisma": "^6.17.0",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
