--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
     "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/server.ts",
     "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
     "restart:pm2": "NODE_ENV=production pm2 restart express-backend",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "prisma:push": "prisma db push",
+    "docker:dev": "docker compose up -d",
+    "docker:dev:logs": "docker compose logs -f postgres",
+    "docker:dev:down": "docker compose down",
+    "docker:prod": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d",
+    "docker:prod:logs": "docker compose -f docker-compose.yml -f docker-compose.prod.yml logs -f postgres",
+    "docker:prod:down": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -26,7 +37,6 @@
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
     "@prisma/client": "^6.17.0",
-    "@prisma/extension-accelerate": "^2.0.2",
     "better-auth": "^1.3.27",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
