--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.build.json",
     "pretty": "npx prettier ./src --write",
-    "lint": "npx eslint ./src --fix",
+    "pretty:check": "npx prettier ./src --check",
+    "lint": "npx eslint . --fix",
+    "lint:check": "npx eslint .",
     "start": "NODE_ENV=production node dist/server.js",
     "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/server.ts",
     "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
