--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express_template",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
     "build": "rimraf dist && tsc -p ./tsconfig.build.json",
@@ -33,8 +33,8 @@
       "eslint --fix"
     ]
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["expressjs", "node", "template", "boilerplate"],
+  "author": "Alexander Rodriguez",
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
@@ -75,7 +75,6 @@
     "prettier": "3.6.2",
     "prisma": "^6.17.0",
     "rimraf": "^6.0.1",
-    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
