Add dotenv-cli package and use for prisma scripts
pass NODE_ENV env var before prisma scripts to specify which .env file you want it to use

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/server.ts",
     "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
     "restart:pm2": "NODE_ENV=production pm2 restart express-backend",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:generate": "dotenv -e .env.$NODE_ENV -- prisma generate",
+    "prisma:migrate": "dotenv -e .env.$NODE_ENV -- prisma migrate dev",
+    "prisma:migrate:deploy": "dotenv -e .env.$NODE_ENV -- prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:push": "prisma db push",
     "docker:dev": "docker compose up -d",
@@ -69,6 +69,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.7.0",
     "@types/xss-filters": "^1.2.0",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
