--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,2 +1,16 @@
 services:
   postgres:
+    env_file:
+      - .env.development
+    ports:
+      - "6432:5432"
+    volumes:
+      - postgres_data_dev:/var/lib/postgresql/data
+
+  pgbouncer:
+    env_file:
+      - .env.development
+
+
+volumes:
+  postgres_data_dev:
