--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,22 @@
 services:
   postgres:
-    image: postgres:18-alpine
-    container_name: express_boilerplate_postgres_dev
-    env_file:
-      - .env.development
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data_dev:/var/lib/postgresql/data
+    image: postgres:18.0-alpine3.22
+    container_name: express_boilerplate_postgres
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U dev"]
       interval: 5s
       timeout: 5s
       retries: 5
 
-volumes:
-  postgres_data_dev:
+  pgbouncer:
+    image: edoburu/pgbouncer:v1.24.1-p0
+    environment:
+      POOL_MODE: session
+      MAX_CLIENT_CONN: 100
+      DEFAULT_POOL_SIZE: 20
+    ports:
+      - "5432:5432"
+    depends_on:
+      - postgres
+
 
