Add pgbouncer env vars and edits for prisma migrate
primsa migrate should run connecting to the postgres database directly and not through pgbouncer

--- a/.env.development
+++ b/.env.development
@@ -2,16 +2,24 @@
 NODE_ENV=development
 PORT=3000
 
-# Database - connects to Docker Postgres
-DATABASE_URL=postgresql://dev:dev@localhost:5432/dev
+# Database url for prisma.
+PRISMA_DATABASE_URL=postgresql://dev:dev@localhost:5432/dev # change localhost:5432 to pgbouncer if running express in docker
+PRISMA_DATABASE_DIRECT_URL=postgresql://dev:dev@localhost:6432/dev
 
 # Postgres Docker Container (used by docker-compose)
 POSTGRES_USER=dev
 POSTGRES_PASSWORD=dev
 POSTGRES_DB=dev
 
-# On unix platform run openssl rand -base64 64 for secret generation
+# PG Bouncer vars must match postgres vars
+DB_USER=dev
+DB_PASSWORD=dev
+DB_NAME=dev
+DB_HOST=postgres
+DATABASE_URL=postgresql://dev:dev@postgres/dev # Database url for PG Bouncer
 
+# On unix platform run openssl rand -base64 64 for secret generation
 # Better Auth
 BETTER_AUTH_SECRET=thisisafakesecretandyoushouldchangeitpronto
 BETTER_AUTH_URL=http://localhost:3000
+
