Copy prisma-postgres files into dist
Is there a better way?

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "build": "rimraf dist && tsc -p ./tsconfig.build.json",
+    "build": "rimraf dist && tsc -p ./tsconfig.build.json && mkdir -p ./dist/db/generated/prisma-postgres && cp -r ./src/db/generated/prisma-postgres/* ./dist/db/generated/prisma-postgres",
     "pretty": "npx prettier ./src --write",
     "pretty:check": "npx prettier ./src --check",
     "lint": "npx eslint . --fix",
