--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/server.ts",
     "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
     "restart:pm2": "NODE_ENV=production pm2 restart express-backend",
-    "prisma:generate": "dotenv -e .env.$NODE_ENV -- prisma generate",
-    "prisma:migrate": "dotenv -e .env.$NODE_ENV -- prisma migrate dev",
+
+    "prisma:generate": "pnpm prisma:generate:dev",
+    "prisma:generate:dev": "dotenv -e .env.development -- prisma generate",
+    "prisma:generate:prod": "dotenv -e .env.production -- prisma generate",
+
+    "prisma:migrate": "pnpm prisma:migrate:dev",
+    "prisma:migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
+    "prisma:migrate:prod": "dotenv -e .env.production -- prisma migrate dev",
+
     "prisma:migrate:deploy": "dotenv -e .env.$NODE_ENV -- prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:push": "prisma db push",
