--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,8 @@ services:
       POOL_MODE: session
       MAX_CLIENT_CONN: 100
       DEFAULT_POOL_SIZE: 20
+      AUTH_TYPE: scram-sha-256
     ports:
       - "5432:5432"
     depends_on:
       - postgres
-
-
