--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prisma": "^6.17.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0"
   }
