--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/server.ts",
     "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
     "restart:pm2": "NODE_ENV=production pm2 restart express-backend",
+    "auth:generate": "NODE_ENV=development npx @better-auth/cli generate --config src/lib/auth.ts",
     "prisma:generate": "pnpm prisma:generate:dev",
     "prisma:generate:dev": "dotenv -e .env.development -- prisma generate",
     "prisma:generate:prod": "dotenv -e .env.production -- prisma generate",
@@ -64,6 +65,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.3.27",
     "@eslint/js": "^9.37.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
