Remove env.devlopment and add base env.example

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ DATABASE_URL=postgresql://dev:dev@postgres/dev # Database url for PG Bouncer
 BETTER_AUTH_SECRET=thisisafakesecretandyoushouldchangeitpronto
 BETTER_AUTH_URL=http://localhost:3000
 
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
