--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.7.0",
+    "@types/qs": "^6.14.0",
     "@types/xss-filters": "^1.2.0",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9.37.0",
