--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pretty:check": "npx prettier ./src --check",
     "lint": "npx eslint . --fix",
     "lint:check": "npx eslint .",
+    "seed:dev": "NODE_ENV=development tsx ./scripts/seed.ts",
     "start": "NODE_ENV=production node dist/server.js",
     "start:dev": "NODE_ENV=development nodemon --watch src --ext ts --exec tsx src/server.ts",
     "start:pm2": "NODE_ENV=production pm2 start dist/server.js --name express-backend",
